<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/roadIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margins"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginRight="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/road_input_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roadIdInput" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginRight="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchButton"
            android:visibility="invisible">

            <TextView
                android:id="@+id/roadNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/road_name"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/roadStatusTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins"
                android:text="@string/road_status"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roadNameTitle" />

            <TextView
                android:id="@+id/roadStatusDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins"
                android:text="@string/road_description"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roadStatusTitles" />

            <TextView
                android:id="@+id/roadStatusDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginStart="@dimen/margins"
                app:layout_constraintStart_toEndOf="@+id/roadStatusDescriptionTitle"
                app:layout_constraintTop_toTopOf="@+id/roadStatusDescriptionTitle" />

            <TextView
                android:id="@+id/roadStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/roadStatusDescriptionLabel"
                app:layout_constraintTop_toTopOf="@+id/roadStatusTitles" />

            <TextView
                android:id="@+id/roadNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/roadStatusLabel"
                app:layout_constraintTop_toTopOf="@+id/roadNameTitle" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:alpha="0.6">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"/>
    </RelativeLayout>
</RelativeLayout>